Adding Initial providers & unit tests

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
         "php": ">=5.3.0",
         "illuminate/support": "4.0.x"
     },
+
+    "require-dev": {
+      "mockery/mockery": "0.8.*",
+      "phpunit/phpunit": "3.7.*"
+    },
+
     "autoload": {
         "psr-0": {
             "Tappleby\\AuthToken": "src/"
