- Adding AuthToken Manager (defaults to database driver) - Add AuthToken filter which will fire events when successful. - Add stub for auth token controller.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 
     "autoload": {
         "psr-0": {
-            "Tappleby\\AuthToken": "src/"
+            "Tappleby\\AuthToken": "src/",
+            "Tappleby\\Support": "src/"
         }
     },
     "minimum-stability": "dev"
