Update composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tappleby/auth-token",
+    "name": "tappleby/laravel-auth-token",
     "description": "",
     "authors": [
         {
