--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.x"
+        "illuminate/support": "4.1.x",
+        "namshi/jose": "1.0.*"
     },
 
     "require-dev": {
